--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,18 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (June 29, 2009, 11:37 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=81514">Bug 81514</a>. [EditorMgmt] setInput should defend against null (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=251424">Bug 251424</a>. [DataBinding] Introduce ObservableTracker.setIgnored (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=277120">Bug 277120</a>. [common navigator] Project explorer does not reveal elements when linked to editor (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=278311">Bug 278311</a>. [DataBinding]  INativePropertyListener methods should document that source may be null (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=278314">Bug 278314</a>. [DataBinding] JFaceProperty.Listener should extend NativePropertyListener (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=280341">Bug 280341</a>. [DataBinding] Glitch in ListBinding: Referencing Update*Value*Strategy.POLICY_UPDATE (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=281727">Bug 281727</a>. [DataBinding] observing delegating value property of observable list/set/map returns null if master element's hash code has changed (FIXED)<br>
+  </p>
+
 <p>Integration Build (June 04, 2009, 5:59 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
