--- a/examples/org.eclipse.compare.examples.xml/doc-html/ui_xmlcompare_ex.html
+++ b/examples/org.eclipse.compare.examples.xml/doc-html/ui_xmlcompare_ex.html
@@ -1,11 +1,11 @@
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
-<meta name="copyright" content="Copyright (c) IBM Corporation and others 2000, 2005. This page is made available under license. For full details see the LEGAL in the documentation book that contains this page." >
+<meta name="copyright" content="Copyright (c) IBM Corporation and others 2000, 2009. This page is made available under license. For full details see the LEGAL in the documentation book that contains this page." >
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
    <title>XML Compare Plugin</title>
 </head>
-
+<body>
 <center><h1>Eclipse Platform XML Compare</h1></center>
 The XML Compare plugin allows you to perform a structural compare of two XML documents. It returns
 a difference tree which indicates which XML elements have been added or removed and - for modified XML elements -
