--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (July 07, 2009, 5:19 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=280618">Bug 280618</a>. [CommonNavigator] org.eclipse.ui.navigator has errors (FIXED)<br>
+  </p>
+
 <p>Integration Build (June 29, 2009, 11:37 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
