--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,14 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (July 21, 2009, 12:19 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=281933">Bug 281933</a>. [Dialogs] Show Views Dialog and Windows Preference Dialog fail to open if SHOW_FILTERED_TEXTS is set to false (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=282874">Bug 282874</a>. [ViewMgmt] [ActivityMgmt] NullpointerException during saving state of view registry with disabled xp based activities (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=283204">Bug 283204</a>. [DataBinding] CheckableCheckedElementsObservableSet#clear can cause ConcurrentModificationException (FIXED)<br>
+  </p>
+
 <p>Integration Build (July 08, 2009, 6:39 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
