The map file has been updated for the following Bug changes: + Bug 184684. [Wizards] Check Out As: Location widget should fill its display area horizontally (FIXED) + Bug 221652. [Patch] Widgets layout on Advanced Options page in the Create Patch wizard (FIXED) + Bug 283997. Don't use deprecated ResourceSorter in CVSWizardPage (FIXED)
The following projects have changed:
org.eclipse.team.cvs.ui

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,14 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (lipiec 21, 2009, 1:49 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=184684">Bug 184684</a>. [Wizards] Check Out As: Location widget should fill its display area horizontally (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=221652">Bug 221652</a>. [Patch] Widgets layout on Advanced Options page in the Create Patch wizard (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=283997">Bug 283997</a>. Don't use deprecated ResourceSorter in CVSWizardPage (FIXED)<br>
+  </p>
+
 <p>Integration Build (July 14, 2009, 1:27 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
