Bug 107623  [Webapp] Help system webapp: Provide footer area like banner area (persistent, across browser window, optional)

--- a/org.eclipse.ua.tests/non_junit/test_plan.htm
+++ b/org.eclipse.ua.tests/non_junit/test_plan.htm
@@ -228,6 +228,8 @@ org.eclipse.help.base/help_home=http://www.eclipse.org<br>
 <br>
 org.eclipse.help.base/banner=/org.eclipse.help.webapp/advanced/banner.html<br>
 org.eclipse.help.base/banner_height=60<br>
+org.eclipse.help.base/footer=/org.eclipse.help.webapp/advanced/banner.html<br>
+org.eclipse.help.base/footer_height=40<br>
 org.eclipse.help.base/help_home=http://www.eclipse.org<br>
 org.eclipse.help.base/linksView=false<br>
 org.eclipse.help.base/bookmarksView=false<br>
@@ -264,7 +266,7 @@ plugin_customization.ini</p>
 
 <p  >From the workbench menu: 
 Help-&gt;Help Contents. This should open the help browser. Verify existence of 
-banner frame above search toolbar.</p>
+banner frame above search toolbar and a footer at the bottom  of the screen.</p>
 
   </li>
   <li>
