--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,20 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (July 28, 2009, 3:51 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=107082">Bug 107082</a>. [Dialogs] npe in IconAndMessageDialog.getSWTImage(..) (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=284349">Bug 284349</a>. org.eclipse.ui.menus.ExtensionContributionFactory setInitializationData must declare "throws CoreException" (FIXED)<br>
+  </p>
+
+<p>Integration Build (July 28, 2009, 3:47 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=107082">Bug 107082</a>. [Dialogs] npe in IconAndMessageDialog.getSWTImage(..) (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=284349">Bug 284349</a>. org.eclipse.ui.menus.ExtensionContributionFactory setInitializationData must declare "throws CoreException" (FIXED)<br>
+  </p>
+
 <p>Integration Build (July 28, 2009, 3:42 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
