--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (August 03, 2009, 5:27 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=277375">Bug 277375</a>. NPE shutting down with compare editor open (ASSIGNED)<br>
+  </p>
+
 <p>Integration Build (lipiec 21, 2009, 1:49 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
