--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,14 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (August 11, 2009, 12:10 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=276324">Bug 276324</a>. [ViewMgmt] CycleBaseHandler throws NPE if no workbench parts available (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=285555">Bug 285555</a>. Write tests for the ProgressView (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=286160">Bug 286160</a>. [Markers] Use 'bottom up' heap sort to optimize the Markers view (ASSIGNED)<br>
+  </p>
+
 <p>Integration Build (July 28, 2009, 3:54 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
