Build submission for M20090812-0800a

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,17 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (August 12, 2009, 1:12 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=209333">Bug 209333</a>. [Trim] [Trim] NPE in IWorkbenchPage.setPartState(IWorkbenchPartReference, IWorkbenchPage.STATE_RESTORED); (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=224546">Bug 224546</a>. [ViewMgmt] Remove F2 from ShowViewDialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=273112">Bug 273112</a>. [Markers] Use 'bottom up' heap sort to optimize the Markers view (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=277926">Bug 277926</a>. [Commands] Command is not invoked when focus changes. (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=278933">Bug 278933</a>. [Workbench] FileNotFoundException in test log makes it particularly unreadable (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=281623">Bug 281623</a>. [FastView] NPE in FastViewPane$2.setState (was: File Search doesn't work in 3.5.0) (FIXED)<br>
+  </p>
+
 <p>Integration Build (July 21, 2009, 12:19 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
