--- a/bundles/org.eclipse.ui.ide/about.html
+++ b/bundles/org.eclipse.ui.ide/about.html
@@ -8,7 +8,7 @@
 <body lang="EN-US">
 <h2>About This Content</h2>
  
-<p>June 2, 2006</p>	
+<p>August 13, 2009</p>	
 <h3>License</h3>
 
 <p>The Eclipse Foundation makes available all content in this plug-in (&quot;Content&quot;).  Unless otherwise 
@@ -24,5 +24,53 @@ provided with the Content.  If no such license exists, contact the Redistributor
 indicated below, the terms and conditions of the EPL still apply to any source code in the Content
 and such source code may be obtained at <a href="http://www.eclipse.org">http://www.eclipse.org</a>.</p>
 
+<h3>Third Party Content</h3>
+
+<p>The Content includes items that have been sourced from third parties as set out below. If you did not
+receive this Content directly from the Eclipse Foundation, the following is provided for informational
+purposes only, and you should look to the Redistributor?s license for terms and conditions of use.</p>
+
+<h4>C++ Standard Template Library</h4>
+<p>
+This plugin contains a Java port of the code for the STL heap sorting algprithm. The original code can
+be found at:
+<ul>
+<a href="http://www.sgi.com/tech/stl/stl_heap.h">http://www.sgi.com/tech/stl/stl_heap.h</a> 
+</ul>
+</p>
+<p>The java implementation of the code can be found in src.zip in the following files:</p>
+
+<ul>
+ <li>org\eclipse\ui\internal\views\markers\MarkerSortUtil.java</li>
+</ul>
+
+<h4>Copyright info</h4>
+<pre>
+/*
+ *
+ * Copyright (c) 1994
+ * Hewlett-Packard Company
+ *
+ * Permission to use, copy, modify, distribute and sell this software
+ * and its documentation for any purpose is hereby granted without fee,
+ * provided that the above copyright notice appear in all copies and
+ * that both that copyright notice and this permission notice appear
+ * in supporting documentation.  Hewlett-Packard Company makes no
+ * representations about the suitability of this software for any
+ * purpose.  It is provided "as is" without express or implied warranty.
+ *
+ * Copyright (c) 1997
+ * Silicon Graphics Computer Systems, Inc.
+ *
+ * Permission to use, copy, modify, distribute and sell this software
+ * and its documentation for any purpose is hereby granted without fee,
+ * provided that the above copyright notice appear in all copies and
+ * that both that copyright notice and this permission notice appear
+ * in supporting documentation.  Silicon Graphics makes no
+ * representations about the suitability of this software for any
+ * purpose.  It is provided "as is" without express or implied warranty.
+ * 
+ */
+</pre>
 </body>
 </html>
