Build submission for I20090818-0800

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,22 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (August 18, 2009, 12:12 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=139211">Bug 139211</a>. "Open Referenced Projects" dialog pops up even when there are no referenced projects (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=224546">Bug 224546</a>. [ViewMgmt] Remove F2 from ShowViewDialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=278550">Bug 278550</a>. [Databinding] ObservablesManager, ObservableTracker and MapSimpleValueObservableMap lead to exception (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=281723">Bug 281723</a>. [Databinding] SWTException: Invalid thread access when binding in non-UI thread (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=282690">Bug 282690</a>. [DataBinding] problems with disposed observables (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=283351">Bug 283351</a>. [DataBinding] Document ObservableListTreeContentProvider ObservableCollectionTreeContentProvider constructor realm restriction (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=283428">Bug 283428</a>. [DataBinding] ViewerSupport.bind() cannot be called multiple times (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=284366">Bug 284366</a>. [DataBinding] ObservableValueEditingSupport sets model value 1st time even if not changed (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=284556">Bug 284556</a>. [DataBinding] IDisposeListener.handleDispose parameter has wrong name (staleEvent) (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=286160">Bug 286160</a>. [Markers] Use 'bottom up' heap sort to optimize the Markers view (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=286533">Bug 286533</a>. [DataBinding] Test failure in build N20090812-2000 (FIXED)<br>
+  </p>
+
 <p>Integration Build (August 11, 2009, 12:10 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
