UI Build Submission for M20090819-0800

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,25 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (August 18, 2009, 11:44 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=269172">Bug 269172</a>. [Contributions] WorkbenchMenuService calling Display.syncExec() on disposed Display (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=273112">Bug 273112</a>. [Markers] Use 'bottom up' heap sort to optimize the Markers view (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=273495">Bug 273495</a>. [ActionSets] Actionsets leak when opening/closing perspectives (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=276162">Bug 276162</a>. [KeyBindings] Exporting key preferences to CSV does not warn of overwriting file (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=278550">Bug 278550</a>. [Databinding] ObservablesManager, ObservableTracker and MapSimpleValueObservableMap lead to exception (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=278734">Bug 278734</a>. [ActivityMgmt] WorkbenchActivityHelper restrictArray is returning NULL for objects failing the test "restrictUseOf(Object)" (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=281723">Bug 281723</a>. [Databinding] SWTException: Invalid thread access when binding in non-UI thread (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=282046">Bug 282046</a>. [MPE] MultiPageEditorSite does not remove properly its KeyBindingService (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=282690">Bug 282690</a>. [DataBinding] problems with disposed observables (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=283351">Bug 283351</a>. [DataBinding] Document ObservableListTreeContentProvider ObservableCollectionTreeContentProvider constructor realm restriction (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=283428">Bug 283428</a>. [DataBinding] ViewerSupport.bind() cannot be called multiple times (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=284366">Bug 284366</a>. [DataBinding] ObservableValueEditingSupport sets model value 1st time even if not changed (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=285045">Bug 285045</a>. [IDE] TVT35:TCT330: CHS: Duplicate Mnemonic Keys  on workspace pref page (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=286533">Bug 286533</a>. [DataBinding] Test failure in build N20090812-2000 (FIXED)<br>
+  </p>
+
 <p>Integration Build (August 12, 2009, 1:12 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
