Bug 190467  [Help] Dynamically link to all children in existing topics

--- a/org.eclipse.ua.tests/data/help/performance/search/ua_help_content.htm
+++ b/org.eclipse.ua.tests/data/help/performance/search/ua_help_content.htm
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <meta http-equiv="Content-Style-Type" content="text/css">
 <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
-<script language="JavaScript" src="PLUGINS_ROOT/org.eclipse.help/livehelp.js"></script>
+<script language="JavaScript" src="PLUGIN__ROOT/org.eclipse.help/livehelp.js"></script>
 <title>Help content</title>
 </head>
 <body>
