The map file has been updated for the following Bug changes: + Bug 77207. [Repo View] Keyboard shortcut for copying cvs repository location to clipboard (FIXED) + Bug 239003. Enable 'Apply Patch' everywhere (ASSIGNED) + Bug 262515. [SSH2] An undetermined authentication failure (FIXED) + Bug 287532. ModelElementSelectionPage uses deprecated ResourceSorter (FIXED)
The following projects have changed:
org.eclipse.team.cvs.ui
org.eclipse.team.examples.filesystem
org.eclipse.jsch.ui
org.eclipse.team.ui
org.eclipse.jsch.core
org.eclipse.team.core

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,15 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (August 25, 2009, 11:21 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=77207">Bug 77207</a>. [Repo View] Keyboard shortcut for copying cvs repository location to clipboard (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=239003">Bug 239003</a>. Enable 'Apply Patch' everywhere (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262515">Bug 262515</a>. [SSH2] An undetermined authentication failure (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=287532">Bug 287532</a>. ModelElementSelectionPage uses deprecated ResourceSorter (FIXED)<br>
+  </p>
+
 <p>Integration Build (August 03, 2009, 5:27 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
