--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,15 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (August 26, 2009, 1:42 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=279514">Bug 279514</a>. [Metadata] UI bundles should depend on SWT 3.5, not 3.4 (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=283162">Bug 283162</a>. [DataBinding] 3.4 org.eclipse.jface.tests.databinding bundle has a higher version than 3.5 (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=285804">Bug 285804</a>. [Import/Export] File -> Import filesystem w/cyclical symbolic folder links causes OOME (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=287621">Bug 287621</a>. [CommonNavigator] Add more tracing (FIXED)<br>
+  </p>
+
 <p>Integration Build (August 20, 2009, 10:59 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
