Build submission for I20090901-0800

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,25 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (September 01, 2009, 4:22 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=258493">Bug 258493</a>. [Dialogs] Ampersand in path not rendered in Open Resource dialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=269844">Bug 269844</a>. [GlobalActions] "Close Unrelated Projects" is dangerous and needs confirmation (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=275867">Bug 275867</a>. [ErrorHandling] StatusManager#handle() produces a dialog that is not centered well (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=276371">Bug 276371</a>. [ErrorHandling] Need to clean up dialog field after failure in status handling (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=278965">Bug 278965</a>. [ErrorHandling] Error status dialog shows 'Show Error Log' link even though nothing got logged (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=280656">Bug 280656</a>. [ViewMgmt] Sticky views are not working when view has a secondary ID (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=286013">Bug 286013</a>. [Trim] NPE in IWorkbenchPage.setPartState(IWorkbenchPartReference, IWorkbenchPage.STATE_RESTORED); (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=286144">Bug 286144</a>. [Commands] Command is not invoked when focus changes. (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=286485">Bug 286485</a>. [Commands] ACTIVE_EDITOR_INPUT_NAME does not contribute to source priority (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=287211">Bug 287211</a>. [Import/Export] Eclipse not responsive when export to archive a lot of projects (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=287517">Bug 287517</a>. [DataBinding] Race condition in WidgetObservableThreadTest (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=287601">Bug 287601</a>. [DataBinding][Regression] NullpointerException if observables are disposed while masterdetail running (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=287621">Bug 287621</a>. [CommonNavigator] Add more tracing (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=288202">Bug 288202</a>. [Metadata] UI bundles should depend on SWT 3.5, not 3.4 (FIXED)<br>
+  </p>
+
 <p>Integration Build (August 24, 2009, 11:26 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
