*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,14 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (September 02, 2009, 4:26 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=287103">Bug 287103</a>. [CommonNavigator] contentServiceLabelProvider doesn't properly implement overrides (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=287601">Bug 287601</a>. [DataBinding][Regression] NullpointerException if observables are disposed while masterdetail running (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=287623">Bug 287623</a>. [CommonNavigator] Improve junit tests for label providers (DUPLICATE)<br>
+  </p>
+
 <p>Integration Build (August 26, 2009, 1:42 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
