--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,11 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (September 02, 2009, 8:41 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+  </p>
+
 <p>Integration Build (September 02, 2009, 4:26 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
